updated markdown article rendering
